--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,7 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/FrahHS/protopy"
 Issues = "https://github.com/FrahHS/protopy/issues"
+
+# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401", "F403", "F405"]
